# you-need-an-mcp

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CACHE_DESIGN.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  conftest.py  models.py  pyproject.toml  repository.py  server.py  test_server.py
.github/workflows/: ci.yml
plans/: caching.md
tests/: assertions.py  conftest.py  test_accounts.py  test_assertions.py  test_budget_months.py  test_budgets.py  test_categories.py  test_payees.py  test_repository.py  test_scheduled_transactions.py  test_transactions.py  test_updates.py  test_utilities.py
